<resources>
<string name="app_name">Nexa</string><string name="user_name">Nexa</string><string name="user_initials">N</string><string name="title_sheets">Suas planilhas</string><string name="search_hint">Buscar planilhas</string><string name="continue_label">CONTINUAR</string><string name="featured_name">Nova planilha</string><string name="featured_edited">Editado recentemente</string><string name="open">Abrir</string><string name="shortcut_import">Importar</string><string name="shortcut_open">Abrir</string><string name="shortcut_favorites">Favoritas</string><string name="recents">Recentes</string><string name="see_all">Ver todas</string><string name="nav_home">Início</string><string name="nav_files">Arquivos</string><string name="nav_templates">Modelos</string><string name="nav_more">Mais</string><string name="cd_refresh">Atualizar</string><string name="cd_create">Criar documento</string><string name="cd_logo">Logo Nexa</string>
</resources>